Added testing for databases, and fixed some potential database bugs